Complete Prime Test

--- a/fly.toml
+++ b/fly.toml
@@ -15,7 +15,13 @@ primary_region = 'ewr'
 
 [[services]]
   protocol = "tcp"
-  internal_port = 50001 # Match the port your app listens on
-
+  internal_port = 50001
   [[services.ports]]
-    port = 50001  # Change to the TCP port you want to expose
+    port = 50001
+
+[[services]]
+  protocol = "tcp"
+  internal_port = 50002
+  [[services.ports]]
+    port = 50002
+
