Implement basic message handling for Speed Daemon
This needs a lot of refactoring...

--- a/fly.toml
+++ b/fly.toml
@@ -48,3 +48,9 @@ primary_region = 'ewr'
   internal_port = 50006
   [[services.ports]]
     port = 50006
+
+[[services]]
+  protocol = "tcp"
+  internal_port = 50007
+  [[services.ports]]
+    port = 50007
